src/test/fail/invalid_compare.ly
<@lily
list[integer] a = [1]
list[string] b = ["a"]
if a == b: {
}
@>